# sketchy-mvc

./: CMakeLists.txt  main.cpp
src/: controller.h  imgui_impl_raylib.cpp  imgui_impl_raylib.h  manager.h  model.h  view.h
src/controllers/: abstract.h  increment.cpp  increment.h
src/controllers/increment/: increment.cpp  increment.h
src/managers/: appManager.cpp  appManager.h  typeName.h
src/models/: abstract.h  increment.h
src/models/increment/: increment.h
src/views/: abstract.h  increment.cpp  increment.h
src/views/increment/: increment.cpp  increment.h
src/views/layouts/: layout.cpp  layout.h
